--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -1,1 +1,10 @@
-name 
+name : Quality checks
+on: push
+
+jobs:
+  check_name:
+    name: Check that name is present in README
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - run: grep "Ivan" README.md
